FEAT: moved more files from demo to skeleton, updated libraries

--- a/skeleton/src/main/res/values/strings.xml
+++ b/skeleton/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AppSkeleton</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
